--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.eugenia.starwars">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,9 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".HeroDetailActivity"
-                    android:parentActivityName=".HomeActivity" />
+        <activity android:name=".HomeActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
+        <activity android:name=".HeroDetailActivity" android:parentActivityName=".HomeActivity" />
     </application>
 
 </manifest>
